# driver-api

./: .env.template  .gitignore  .gitleaks.toml  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  MAINTAINERS.md  README.md  openapi.json  test.sh
.github/: PULL_REQUEST_TEMPLATE.md
.sqlx/: query-02cc280868a5645b078434860e4003f5bd62691dc1acf23717cdea979313df74.json  query-0322ef4b48d4de2950f95476129cfaad87e276599df78a9b5a48b2ca68ef928f.json  query-093f9f901c6ac5f980a6190ef36dae3551c2c81556c92257cd93f02024a39ad1.json  query-09ad5971792a9b8b28f3c92281a93528b199ff2c1e1746d02c037ca213a66c2b.json  query-0dbfb4124e199a251e98992747cdb863aadb925ef9f8e7da357c0a61257b8f3e.json  query-0ee884840c2dc52f3ea74e6cf02cbf35394a4f2b0b59ccb60d76c0291b2c88ce.json  query-13df362f585a9e12d56bec40771235a8b56dea58b02f134697a1f1aabc9dd4bd.json  query-17f290bfd6ff34ec2bd8b67d888126d39d3957513048d33fa23c71f273aefdd1.json  query-1d5a923b30cdf3ede1d8b27942f3295b8943f10826c6b28d784e34203482c7e0.json  query-208a2ada3b2f6e8bff799ca074576ff213be16db5649a4707b2175c4fada54a9.json  query-24b5571e88bf12e0d35c30a28c05a61f677b187535b7faaecc9dccdf255bec29.json  query-25d1e656ee4a41baaf137fde636e0596866c2a9650f112c5ffba28f7160675fc.json  query-2a280aba84231d39558f7a711f6a8d3bddfee861019786c1909ee1ecc432ca9e.json  query-2a3d231bb77ece02e1dd50d3482ffe672c8c9af5c5d5051adad577c408493258.json  query-2fd4eb6c8587ef6a608afc2bb7687783da96ce42424d61872f2ff4b6eb37d44d.json  query-30ff3c117050aa86d9bf7561bc7f04b9b30cb0248408d37e4027620379451905.json  query-32bc784d740a1c5cbf685441f53492d98e1f079af63ac019b4fd18606657220d.json  query-33629d2ff38d4b4b1c40cf397c4d333e0eba282bdd620f7f139e6bdf3e60071d.json  query-379dbdb8e70cb78937959351c406ab8825a6592780c1d8d35dba3d5d05485766.json  query-4f3d3aaa3d5957b037637a89139c27bd4897aa0920dc56f74affff3bbaf751dd.json  query-50feca847344b84d8d663f553f227e9850d06e4a9ea5fc3d52c433c1c0740300.json  query-597ac4aa4e58f41b33623e3e5965eb7d7396e000cbcc475907e828ceb9b7e920.json  query-59f32eace6e0ae3c382a8eb278c1322c165327070e45eb9ae177e36a270c5be2.json  query-5a55e83625875d961e19f6268bb6b994f61d27781aa278cd6fe32a595c251c38.json  query-5cdeacd13031a655b1bcb0771abfe72dbd29ba52ade6a5ee1b674f656bc0bb06.json  query-67c0f13e8e4aa84e4beb1d5ce27aee1df482bde74c9b403a6bf08c7e20071e7e.json  query-68b44e0f45df03f5be22b13edd9ebb3c275dc3c344de78a1fa4bd281027859aa.json  (+31 more)
api/: Cargo.toml  cargo.toml
api/src/: app.rs  config.rs  lib.rs  main.rs
api/src/http/: mod.rs
api/src/http/authentication/: handlers.rs  routes.rs
api/src/http/common/: api_error.rs  app_state.rs  mod.rs  response.rs  validator.rs
api/src/http/common/middleware/: tracing.rs
api/src/http/common/middleware/auth/: entities.rs  mod.rs
api/src/http/config/: handlers.rs  routes.rs
api/src/http/driver/: handlers.rs  routes.rs
api/src/http/drivers/: routes.rs
api/src/http/formating/: handlers.rs  routes.rs
api/src/http/health/: handlers.rs  routes.rs
api/src/http/mail/: handlers.rs  routes.rs
api/src/http/update/: handlers.rs  routes.rs
api/src/http/workday/: handlers.rs  routes.rs
api/tests/: authentication.rs  driver.rs  mod.rs  workday.rs  workdays.rs
api/tests/context/: mod.rs
api/tests/helpers/: auth.rs
api/tests/mails/: get_mail.rs  get_mail_attachment.rs  get_mail_preferences.rs  get_mail_types.rs  get_mails.rs  mail_preference_guard.rs  mod.rs  update_mail_preference.rs
api/tests/workdays/: create_workday.rs  delete_workday.rs  delete_workday_garbage.rs  get_all_workday_garbage.rs  get_all_workdays_month.rs  get_all_workdays_period.rs  get_workday_by_date.rs  get_workday_document_by_month.rs  get_workday_documents.rs  mod.rs  update_workday.rs
api/tests/workdays/documents/: get_workday_document_by_month.rs  get_workday_document_years.rs  get_workday_documents.rs  get_workday_documents_by_year.rs  mod.rs
config/: test-dataset.sql
core/: Cargo.toml  build.rs
core/proto/: workdays.proto
core/src/: lib.rs
core/src/application/: mod.rs
core/src/domain/: mod.rs
core/src/domain/common/: config.rs  constants.rs  entities.rs  mod.rs  services.rs
core/src/domain/document/: port.rs
core/src/domain/driver/: entities.rs  port.rs  services.rs
core/src/domain/employee/: entities.rs  mod.rs  port.rs
core/src/domain/formating/: entities.rs
core/src/domain/health/: entities.rs  port.rs  services.rs
core/src/domain/mail/: entities.rs  port.rs  services.rs
core/src/domain/storage/: port.rs
core/src/domain/test/: mod.rs
core/src/domain/test/workday/: mock_test.rs  mod.rs
core/src/domain/update/: entities.rs  port.rs  services.rs
core/src/domain/workday/: entities.rs  port.rs  services.rs
core/src/infrastructure/: mod.rs
core/src/infrastructure/document/repositories/: error.rs  grpc.rs  proto.rs
core/src/infrastructure/driver/repositories/: error.rs  mod.rs  postgres.rs  redis.rs
core/src/infrastructure/employee/repositories/: error.rs  postgres.rs
core/src/infrastructure/health/repositories/: error.rs  postgres.rs
core/src/infrastructure/mail/repositories/: error.rs  mod.rs  postgres.rs  redis.rs  smtp.rs
core/src/infrastructure/storage/repositories/: error.rs  mod.rs  s3.rs
core/src/infrastructure/update/repositories/: error.rs  postgres.rs  redis.rs
core/src/infrastructure/workday/repositories/: error.rs  mod.rs  postgres.rs  redis.rs
core/src/templates/mails/en/: account_creation.html  base.html
core/src/templates/mails/fr/: base.html
core/templates/mails/en/: account_deactivation.html  account_reactivation.html  base.html  email_change.html  monthly_report.html  password_change.html  password_reset.html  verify_account.html
core/templates/mails/fr/: account_creation.html  account_deactivation.html  account_reactivation.html  base.html  email_change.html  monthly_report.html  password_change.html  password_reset.html  verify_account.html
job/: Cargo.toml
job/src/: config.rs  main.rs
job/src/jobs/: delete_garbage.rs  generate_documents.rs  mod.rs  purge_deactivated_accounts.rs  reconcile_documents.rs  send_monthly_reports.rs
(+10 files in other folders)
