[workspace]
resolver = "3"
members = ["api", "core"]

[workspace.package]
name = "plannify-driver-api"
edition = "2024"
version = "0.1.0"
authors = ["Plannify <contact@plannify.be>"]
license = "Apache-2.0"

[workspace.dependencies]
thiserror = "2.0.18"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

# Tracing
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.1", features = ["tonic"] }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
tracing-opentelemetry = "0.32.1"

# Mailing
lettre = { version = "0.11.21", features = ["builder", "serde", "tokio1", "tokio1-native-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9"
validator = { version = "0.20", features = ["derive"] }

# Database
chrono = { version = "0.4.44", features = ["serde"] }
uuid = { version = "1.23.1", features = ["serde", "v4"] }

# Documentation
utoipa = { version = "5.4.0", features = ["uuid", "chrono"] }

# Storage
aws-sdk-s3 = "1.129.0"