[package]
name = "api"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Axum framework
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors"] }
axum-extra = { version = "0.12.2", features = ["cookie"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
validator = { workspace = true }

# Database
chrono = { workspace = true }
uuid = { workspace = true }

# JWT
jsonwebtoken = "9.2"

# External libraries
plannify_driver_api_core = { path = "../core", package = "plannify_driver_api_core" }

# Environment variables
clap = { version = "4.5.53", features = ["derive", "env"] }
env = "1.0.1"
dotenv = "0.15.0"
thiserror = { workspace = true }

# Swagger / OpenAPI
utoipa-axum = "0.2.0"
utoipa = { workspace = true }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Email
lettre = { workspace = true }

[dev-dependencies]
axum-test = "18.3.0"
test-context = "0.5.4"
reqwest = { version = "0.13", features = ["json"] }
base64 = "0.22"
serial_test = "3.0"