[package]
name = "api"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Axum framework
axum = "0.8"
tokio = { workspace = true }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tower = { version = "0.5.3", features = ["limit"]}
axum-extra = { version = "0.12.2", features = ["cookie"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
validator = { workspace = true }

# Database
chrono = { workspace = true }
uuid = { workspace = true }

# JWT
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }

# External libraries
plannify_driver_api_core = { path = "../core", package = "plannify_driver_api_core" }

# Environment variables
clap = { workspace = true }
dotenv = { workspace = true }
thiserror = { workspace = true }

# Swagger / OpenAPI
utoipa-axum = "0.2.0"
utoipa = { workspace = true }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Tracing
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
tracing-opentelemetry = { workspace = true }

# Email
lettre = { workspace = true }

# Storage
aws-sdk-s3 = { workspace = true }

[dev-dependencies]
axum-test = "18.3.0"
test-context = "0.5.4"
reqwest = { version = "0.13", features = ["json"] }
base64 = "0.22"
serial_test = "3.0"
redis = { version = "1.0.2", features = ["tokio-comp", "connection-manager"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }