[package]
name = "plannify_driver_api_core"
description = "Core business logic library for Plannify Driver API"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "plannify_driver_api_core"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.20", features = ["derive"] }
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio",
    "uuid",
    "chrono",
    "bigdecimal",
    "macros",
] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
thiserror = { workspace = true }
utoipa = { version = "5.4.0", features = ["uuid", "chrono"] }

# Password hashing
argon2 = "0.5.3"

# Logging
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }