[package]
name = "plannify_driver_api_core"
description = "Core business logic library for Plannify Driver API"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "plannify_driver_api_core"
path = "src/lib.rs"

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
validator = { workspace = true }
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio",
    "uuid",
    "chrono",
    "bigdecimal",
    "macros",
    "derive",
] }
uuid = { workspace = true }
thiserror = { workspace = true }

# OpenAPI documentation
utoipa = { workspace = true }

# Password hashing
argon2 = "0.5.3"

# Logging
tracing = { workspace = true }

# Mailing
lettre = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }