[package]
name = "plannify_driver_api_core"
description = "Core business logic library for Plannify Driver API"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "plannify_driver_api_core"
path = "src/lib.rs"

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
validator = { workspace = true }
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio",
    "uuid",
    "chrono",
    "bigdecimal",
    "macros",
    "derive",
] }
uuid = { workspace = true }
thiserror = { workspace = true }
rand = { version = "0.9.2" }
passwords = "3.1.16"

# Redis
redis = { version = "1.0.2", features = ["tokio-comp", "connection-manager"] }

# OpenAPI documentation
utoipa = { workspace = true }

# Password hashing
argon2 = "0.5.3"

# Logging
tracing = { workspace = true }

# Mailing
lettre = { workspace = true }
tera = "1.20.1"

# gRPC
tonic = { workspace = true }
tonic-prost = "0.14"
prost = "0.14"
bytes = "1.9"

[build-dependencies]
tonic-prost-build = { version = "0.14", features = ["vendored"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }